# CTK_CAS_Tutorial

CTK_Demo/: CMakeLists.txt  sys_gige.so.17
CTK_Demo/gui/: mainWindowGUI.ui
CTK_Demo/plugins/at.voxelmaster.loadDicomPlugin/: CMakeLists.txt  dicomDataInterface.h  loadDicomInterface.h  loadDicomPlugin.cpp  loadDicomPlugin.h  mainFrameDicomViewGUI.ui  manifest_headers.cmake  toolFrameLoadDicomGUI.ui
CTK_Demo/plugins/at.voxelmaster.microscopeCommunicationPlugin/: BGAPIVideoBuffer.cpp  BGAPIVideoBuffer.h  CMakeLists.txt  bgapi.h  bgapi.hpp  bgapidef.h  bgapidef.hpp  bgapiresult.h  microscopeCommunicationPlugin.cpp  microscopeCommunicationPlugin.h  microscopeVideoInterface.h
CTK_Demo/plugins/at.voxelmaster.microscopeCommunicationPlugin/resources/: img_proc.so.17.0.10082  sys_gige.so.17.0.10082
CTK_Demo/plugins/at.voxelmaster.microscopeNavigationPlugin/: CMakeLists.txt  CMakeLists.txt~  QVideoEncoder.cpp  VideoWidget.cpp  VideoWidget.h  mainFrameMicroscopeViewGUI.ui  microscopeNavigationInterface.h  microscopeNavigationPlugin.cpp  microscopeNavigationPlugin.h  microscopeVideoInterface.h  microscopeVideoServiceTracker.h  toolFrameMicroscopeNavigationGUI.qrc  toolFrameMicroscopeNavigationGUI.ui  videowidgetsurface.cpp  videowidgetsurface.h
CTK_Demo/plugins/at.voxelmaster.trackerCommunicationPlugin/: CMakeLists.txt  CMakeLists.txt~  ndopto.h  optotrak.cpp  optotrak.h  target_libraries.cmake  target_libraries.cmake~  trackerCommunicationPlugin.cpp  trackerCommunicationPlugin.h
CTK_Demo/plugins/at.voxelmaster.trackerNavigationPlugin/: CMakeLists.txt  dicomDataServiceTracker.h  mainFrameTrackerNavigationViewGUI.qrc  mainFrameTrackerNavigationViewGUI.ui  toolFrameTrackerNavigationGUI.ui  trackerNavigationInterface.h  trackerNavigationPlugin.cpp  trackerNavigationPlugin.h
CTK_Demo/plugins/at.voxelmaster.trackerNavigationPlugin/igstkHelpers/: igstkFiducialsPlan.cxx  igstkFiducialsPlan.h  igstkFiducialsPlanIO.cxx  igstkFiducialsPlanIO.h  igstkPathPlan.cxx  igstkPathPlan.h  igstkPathPlanIO.cxx  igstkPathPlanIO.h
CTK_Demo/src/: main.cxx  mainWindowGUI.cxx  mainWindowGUI.h
CTK_Tutorial/: CMakeLists.txt
CTK_Tutorial/plugins/at.voxelmaster.emptyPlugin/: CMakeLists.txt  emptyPlugin.cpp  emptyPlugin.h
CTK_Tutorial/plugins/at.voxelmaster.eventBasedCommunicationReceiverPlugin/: CMakeLists.txt  eventBasedCommunicationReceiverPlugin.cpp  eventBasedCommunicationReceiverPlugin.h
CTK_Tutorial/plugins/at.voxelmaster.eventBasedCommunicationSenderPlugin/: CMakeLists.txt  eventBasedCommunicationSenderPlugin.cpp  eventBasedCommunicationSenderPlugin.h
CTK_Tutorial/plugins/at.voxelmaster.serviceBasedCommunicationReceiverPlugin/: CMakeLists.txt  serviceBasedCommunicationReceiverPlugin.cpp  serviceBasedCommunicationReceiverPlugin.h  serviceInterface.h  serviceTracker.h
CTK_Tutorial/plugins/at.voxelmaster.serviceBasedCommunicationSenderPlugin/: CMakeLists.txt  serviceBasedCommunicationSenderPlugin.cpp  serviceBasedCommunicationSenderPlugin.h  serviceInterface.h
CTK_Tutorial/src/: main.cpp
